# dev-containers

./: .copier-docker-config.cuda-12.1.0-ubuntu22.04.yaml  .copier-docker-config.ubuntu-20.04.yaml  .copier-docker-config.ubuntu-22.04.yaml  .copier-docker-config.yaml  .copierignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile.cuda  Dockerfile.cuda-12.1.0-ubuntu22.04  Dockerfile.cuda-12.8.0-ubuntu22.04  Dockerfile.ubuntu  Dockerfile.ubuntu-20.04  Dockerfile.ubuntu-22.04  docker-compose.cuda-12.1.0-ubuntu22.04.yaml  docker-compose.cuda-12.8.0-ubuntu22.04.yaml  docker-compose.cuda.yaml  docker-compose.cuda121-devel-ubuntu2204.yaml  docker-compose.ubuntu-20.04.yaml  docker-compose.ubuntu-22.04.yaml  docker-compose.ubuntu.yaml  docker.common.env  docker.cuda-12.1.0-ubuntu22.04.env  docker.cuda-12.8.0-ubuntu22.04.env  docker.cuda121-devel-ubuntu2204.env  docker.ubuntu-20.04.env  docker.ubuntu-22.04.env  docker.version
.docker/.docker-scripts/: docker-compose.sh
.docker/.ids/: cuda-12.1.0-ubuntu22.04.env  cuda-12.8.0-ubuntu22.04.env  est.env  kmu.env  pulse9.env  ubuntu-20.04.env  ubuntu-22.04.env
.docker/scripts/: entrypoint.sh  launch.sh
.docker/variants/: cuda-12.1.0-ubuntu22.04.env  cuda-12.8.0-ubuntu22.04.env  ubuntu-20.04.env  ubuntu-22.04.env
.github/: dependabot.yml
.github/workflows/: deploy-cuda-12.1.0-ubuntu22.04-image.yaml  deploy-image.yaml  deploy-ubuntu-20.04-image.yaml  deploy-ubuntu-22.04-image.yaml  docker-publish.yml  release.yaml
scripts/: docker-up-h100-2.sh
