[project]
name = "devcon"
version = "0.4.1"
description = "Development containers, or dev containers, are Docker containers that are specifically configured to provide a fully featured development environment."
authors = [{name = "Young Joon Lee", email = "entelecheia@hotmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/entelecheia/dev-containers"

[dependency-groups]
dev = ["python-semantic-release>=9.0.0"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [".docker/docker.version:IMAGE_VERSION"]
commit_message = "chore(release): :rocket: {version} [skip ci]"
major_on_zero = true
build_command = "mkdir -p dist && echo 'No build command configured' > dist/release.txt"

[tool.semantic_release.publish]
upload_to_vcs_release = false
